<resources>
    <string name="app_name">RifianApps</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="judulfr1">HOME</string>
    <string name="txtNamaLengkap"> Rifian Joe Premilenio </string>
    <string name="txtNim"> 10118013 </string>
    <string name="txtKelas"> IF-1 </string>
    <string name="txtJenisKelamin"> Laki - Laki </string>
    <string name="txtTtl"> Merauke, 05 Juli 2000 </string>
    <string name="txtAlamatRumah"> Jalan Abdul Hamid </string>
    <string name="txtGolDarah"> B </string>
    <string name="txtMakes"> Nasi </string>
    <string name="txtMikes"> Air Putih </string>
    <string name="txtHobi"> Main Game </string>
    <string name="txtLaguFav"> Indonesia Raya </string>
    <string name="txtFilmFav"> Spongebob Squarepants </string>
    <string name="txtCita"> Boss Suatu Perusahaan </string>

    <string name="garis">__________________</string>

    <string name="namaLengkap">Nama Lengkap : </string>
    <string name="nim">Nim : </string>
    <string name="kelas">Kelas : </string>
    <string name="jenisKelamin">Jenis Kelamin : </string>
    <string name="ttl">Tempat Tanggal Lahir : </string>
    <string name="alamatRumah">Alamat Rumah : </string>
    <string name="golonganDarah">Golongan Darah : </string>
    <string name="makes">Makanan Kesukaan : </string>
    <string name="mikes">Minuman Kesukaan : </string>
    <string name="hobi">Hobi : </string>
    <string name="laguFav">Lagu Favorit : </string>
    <string name="filmFav">Film Favorit : </string>
    <string name="cita">Pekerjaan Impian : </string>


</resources>