<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="10dp"
    android:background="@color/midnight_blue"
    tools:context=".Home">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/judul"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="2dp"
        android:textColor="@color/clouds"
        android:textSize="50sp"
        android:textStyle="bold"
        android:typeface="monospace"
        android:text="@string/judulfr1"
        android:textAlignment="center"
        android:layout_toStartOf="@id/foto" />

    <TextView
        android:id="@+id/garis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:textColor="@color/pumpkin"
        android:textSize="25sp"
        android:textStyle="bold"
        android:typeface="monospace"
        android:text="@string/garis"
        android:layout_alignParentStart="true"
        android:layout_below="@id/judul"/>

    <TextView
        android:id="@+id/nama"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="2dp"
        android:textColor="@color/silver"
        android:textSize="13sp"
        android:textStyle="normal"
        android:typeface="serif"
        android:text="@string/namaLengkap"
        android:layout_alignParentStart="true"
        android:layout_below="@id/garis" />
    <TextView
        android:id="@+id/nim"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="2dp"
        android:textColor="@color/silver"
        android:textSize="13sp"
        android:textStyle="normal"
        android:typeface="serif"
        android:text="@string/nim"
        android:layout_alignParentStart="true"
        android:layout_below="@id/txtNama" />
    <TextView
        android:id="@+id/kelas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="2dp"
        android:textColor="@color/silver"
        android:textSize="13sp"
        android:textStyle="normal"
        android:typeface="serif"
        android:text="@string/kelas"
        android:layout_alignParentStart="true"
        android:layout_below="@id/txtNim" />
    <TextView
        android:id="@+id/jk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="2dp"
        android:textColor="@color/silver"
        android:textSize="13sp"
        android:textStyle="normal"
        android:typeface="serif"
        android:text="@string/jenisKelamin"
        android:layout_alignParentStart="true"
        android:layout_below="@id/txtKelas" />
    <TextView
        android:id="@+id/ttl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="2dp"
        android:textColor="@color/silver"
        android:textSize="13sp"
        android:textStyle="normal"
        android:typeface="serif"
        android:text="@string/ttl"
        android:layout_alignParentStart="true"
        android:layout_below="@id/txtJk" />
    <TextView
        android:id="@+id/alamat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="2dp"
        android:textColor="@color/silver"
        android:textSize="13sp"
        android:textStyle="normal"
        android:typeface="serif"
        android:text="@string/alamatRumah"
        android:layout_alignParentStart="true"
        android:layout_below="@id/txtTtl" />
    <TextView
        android:id="@+id/goldar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="2dp"
        android:textColor="@color/silver"
        android:textSize="13sp"
        android:textStyle="normal"
        android:typeface="serif"
        android:text="@string/golonganDarah"
        android:layout_alignParentStart="true"
        android:layout_below="@id/txtAlamat" />
    <TextView
        android:id="@+id/makes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="2dp"
        android:textColor="@color/silver"
        android:textSize="13sp"
        android:textStyle="normal"
        android:typeface="serif"
        android:text="@string/makes"
        android:layout_alignParentStart="true"
        android:layout_below="@id/txtGoldar" />
    <TextView
        android:id="@+id/mikes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="2dp"
        android:textColor="@color/silver"
        android:textSize="13sp"
        android:textStyle="normal"
        android:typeface="serif"
        android:text="@string/mikes"
        android:layout_alignParentStart="true"
        android:layout_below="@id/txtMakes" />
    <TextView
        android:id="@+id/hobi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="2dp"
        android:textColor="@color/silver"
        android:textSize="13sp"
        android:textStyle="normal"
        android:typeface="serif"
        android:text="@string/hobi"
        android:layout_alignParentStart="true"
        android:layout_below="@id/txtMikes" />
    <TextView
        android:id="@+id/lagu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="2dp"
        android:textColor="@color/silver"
        android:textSize="13sp"
        android:textStyle="normal"
        android:typeface="serif"
        android:text="@string/laguFav"
        android:layout_alignParentStart="true"
        android:layout_below="@id/txtHobi" />
    <TextView
        android:id="@+id/film"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="2dp"
        android:textColor="@color/silver"
        android:textSize="13sp"
        android:textStyle="normal"
        android:typeface="serif"
        android:text="@string/filmFav"
        android:layout_alignParentStart="true"
        android:layout_below="@id/txtLagu" />
    <TextView
        android:id="@+id/cita"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="2dp"
        android:textColor="@color/silver"
        android:textSize="13sp"
        android:textStyle="normal"
        android:typeface="serif"
        android:text="@string/cita"
        android:layout_alignParentStart="true"
        android:layout_below="@id/txtFilm" />



    <ImageView
        android:id="@+id/foto"
        android:layout_width="120dp"
        android:layout_height="match_parent"
        android:scaleType="fitStart"
        android:layout_marginStart="10dp"
        android:layout_alignParentEnd="true"
        android:src="@drawable/rifianhimakotak"
        android:background="@color/cardview_dark_background"/>

    <TextView
        android:id="@+id/txtNama"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:textColor="@color/silver"
        android:textSize="13sp"
        android:textStyle="normal"
        android:typeface="serif"
        android:text="@string/txtNamaLengkap"
        android:layout_toEndOf="@id/nama"
        android:layout_below="@id/garis" />
    <TextView
        android:id="@+id/txtNim"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:textColor="@color/silver"
        android:textSize="13sp"
        android:textStyle="normal"
        android:typeface="serif"
        android:text="@string/txtNim"
        android:layout_toEndOf="@id/nim"
        android:layout_below="@id/txtNama" />
    <TextView
        android:id="@+id/txtKelas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:textColor="@color/silver"
        android:textSize="13sp"
        android:textStyle="normal"
        android:typeface="serif"
        android:text="@string/txtKelas"
        android:layout_toEndOf="@id/kelas"
        android:layout_below="@id/txtNim" />
    <TextView
        android:id="@+id/txtJk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:textColor="@color/silver"
        android:textSize="13sp"
        android:textStyle="normal"
        android:typeface="serif"
        android:text="@string/txtJenisKelamin"
        android:layout_toEndOf="@id/jk"
        android:layout_below="@id/txtKelas" />
    <TextView
        android:id="@+id/txtTtl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:textColor="@color/silver"
        android:textSize="13sp"
        android:textStyle="normal"
        android:typeface="serif"
        android:text="@string/txtTtl"
        android:layout_toEndOf="@id/ttl"
        android:layout_below="@id/txtJk" />
    <TextView
        android:id="@+id/txtAlamat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:textColor="@color/silver"
        android:textSize="13sp"
        android:textStyle="normal"
        android:typeface="serif"
        android:text="@string/txtAlamatRumah"
        android:layout_toEndOf="@id/alamat"
        android:layout_below="@id/txtTtl" />
    <TextView
        android:id="@+id/txtGoldar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:textColor="@color/silver"
        android:textSize="13sp"
        android:textStyle="normal"
        android:typeface="serif"
        android:text="@string/txtGolDarah"
        android:layout_toEndOf="@id/goldar"
        android:layout_below="@id/txtAlamat" />
    <TextView
        android:id="@+id/txtMakes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:textColor="@color/silver"
        android:textSize="13sp"
        android:textStyle="normal"
        android:typeface="serif"
        android:text="@string/txtMakes"
        android:layout_toEndOf="@id/makes"
        android:layout_below="@id/txtGoldar" />
    <TextView
        android:id="@+id/txtMikes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:textColor="@color/silver"
        android:textSize="13sp"
        android:textStyle="normal"
        android:typeface="serif"
        android:text="@string/txtMikes"
        android:layout_toEndOf="@id/mikes"
        android:layout_below="@id/txtMakes" />
    <TextView
        android:id="@+id/txtHobi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:textColor="@color/silver"
        android:textSize="13sp"
        android:textStyle="normal"
        android:typeface="serif"
        android:text="@string/txtHobi"
        android:layout_toEndOf="@id/hobi"
        android:layout_below="@id/txtMikes" />
    <TextView
        android:id="@+id/txtLagu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:textColor="@color/silver"
        android:textSize="13sp"
        android:textStyle="normal"
        android:typeface="serif"
        android:text="@string/txtLaguFav"
        android:layout_toEndOf="@id/lagu"
        android:layout_below="@id/txtHobi" />
    <TextView
        android:id="@+id/txtFilm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:textColor="@color/silver"
        android:textSize="13sp"
        android:textStyle="normal"
        android:typeface="serif"
        android:text="@string/txtFilmFav"
        android:layout_toEndOf="@id/film"
        android:layout_below="@id/txtLagu" />
    <TextView
        android:id="@+id/txtCita"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:textColor="@color/silver"
        android:textSize="13sp"
        android:textStyle="normal"
        android:typeface="serif"
        android:text="@string/txtCita"
        android:layout_toEndOf="@id/cita"
        android:layout_below="@id/txtFilm" />

</RelativeLayout>